Feat: add a glow styled component to the ability cards

--- a/src/components/client/CharacterSheet/AbilityCard/styles.css
+++ b/src/components/client/CharacterSheet/AbilityCard/styles.css
@@ -1,6 +1,7 @@
 p {
 	text-align: center;
 	font-size: 0.8rem;
+	font-weight: '900';
 }
 
 .ability-card-container {
@@ -8,12 +9,33 @@ p {
 	padding: 4px;
 }
 
-.ability-card-container {
+.ability-card-container-inner {
+	position: relative;
 	max-width: 200px;
-	padding: 4px;
+	border-radius: 8px;
+	background-color: white;
 }
 
-.ability-card-inner {
-	display: flex;
-	flex-direction: column;
+/* .ability-card-container {
+	position: relative;
+	max-width: 200px;
+	border-radius: 8px;
+	background-color: white;
+} */
+.ability-card-container-inner::after, .ability-card-container-inner::before {
+	content: '';
+	position: absolute;
+	height: 90%;
+	width: 90%;
+	background-color: blue;
+	top: 50%;
+	left: 50%;
+	translate: -50% -50%;
+	z-index: -1;
+	padding: -20px
+}
+
+.ability-card-container-inner::before {
+	filter: blur(1.5rem);
+	opacity: 0.5;
 }
