--- a/src/app/screen/[id]/styles.css
+++ b/src/app/screen/[id]/styles.css
@@ -56,7 +56,7 @@ h3 a:hover {
   text-shadow: 0 0 15px rgba(250, 204, 21, 0.7);
 }
 
-ul {
+/* ul {
   list-style: none;
   padding: 0;
   margin: 0 0 20px 0;
@@ -94,7 +94,7 @@ ul li b {
   color: var(--cyber-yellow);
   margin-right: 5px;
   text-shadow: 0 0 8px rgba(250, 204, 21, 0.6);
-}
+} */
 
 p {
   color: #a0a0a0;
