--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,14 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "daisyui";
+
+
+
+
+@theme {
+  --color-border: hsl(var(--border));
+  --background:  hsl(var(--background));
+  --color-bg-foreground: hsl(var(--foreground));
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -72,7 +80,7 @@ body {
   * {
     @apply border-border;
   }
-  body {
+  /* body {
     @apply bg-background text-foreground;
-  }
+  } */
 }
